photo edit complete

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dm3eadbth",
+    "ApiKey": "374622598882378",
+    "ApiSecret": "csazJveKh01zCDdg8KyUOpngzA0"
+  }
 }
